--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" />
     <title>Home Page</title>
   </head>
   <body>
-    <h1>This is my home page.</h1>
+    <h1 class="text-secondary ">This is my home page.</h1>
   </body>
 </html>
